--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,16 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">182,985</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">95,189</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testng.SFWithSpecificMethod.AccountTest</td><td><a href="#m0">addActivity</a></td><td rowspan="1">1577169355837</td><td rowspan="1">17721</td></tr><tr class="passedeven"><td><a href="#m1">addChatter</a></td><td rowspan="1">1577169373559</td><td rowspan="1">15930</td></tr><tr class="passedeven"><td><a href="#m2">createAccount</a></td><td rowspan="1">1577169331000</td><td rowspan="1">24836</td></tr><tr class="passedodd"><td rowspan="1">testng.SFWithSpecificMethod.ChatterTest</td><td><a href="#m3">Chatter</a></td><td rowspan="1">1577169318277</td><td rowspan="1">12722</td></tr><tr class="passedeven"><td rowspan="3">testng.SFWithSpecificMethod.OpportunityTest</td><td><a href="#m4">Opportunity</a></td><td rowspan="1">1577169263964</td><td rowspan="1">17446</td></tr><tr class="passedeven"><td><a href="#m5">addActivity</a></td><td rowspan="1">1577169281421</td><td rowspan="1">22383</td></tr><tr class="passedeven"><td><a href="#m6">addChatter</a></td><td rowspan="1">1577169303806</td><td rowspan="1">14470</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testng.Demo1_GlobalSearch.SFGlobalSearch</td><td><a href="#m0">globalSearch</a></td><td rowspan="1">1578857685430</td><td rowspan="1">49954</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testng.SFWithSpecificMethod.AccountTest#addActivity</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testng.SFWithSpecificMethod.AccountTest#addChatter</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testng.SFWithSpecificMethod.AccountTest#createAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testng.SFWithSpecificMethod.ChatterTest#Chatter</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">testng.SFWithSpecificMethod.OpportunityTest#Opportunity</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">testng.SFWithSpecificMethod.OpportunityTest#addActivity</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">testng.SFWithSpecificMethod.OpportunityTest#addChatter</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testng.Demo1_GlobalSearch.SFGlobalSearch#globalSearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
