--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,36 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9191a6">  <td>19/12/24 12:03:33</td>   <td>0</td> <td title="&gt;&gt;AccountTest.setupSuite()[pri:0, instance:testng.SFWithSpecificMethod.AccountTest@3c0be339]">&gt;&gt;setupSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="c4f3a0">  <td>19/12/24 12:03:33</td>   <td>587</td> <td title="&gt;&gt;ChatterTest.setupSuite()[pri:0, instance:testng.SFWithSpecificMethod.ChatterTest@1ebd319f]">&gt;&gt;setupSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/24 12:03:33</td>   <td>626</td> <td title="&gt;&gt;OpportunityTest.setupSuite()[pri:0, instance:testng.SFWithSpecificMethod.OpportunityTest@7b02881e]">&gt;&gt;setupSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="9191a6">  <td>19/12/24 12:03:33</td>   <td>664</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTest.setupTest()[pri:0, instance:testng.SFWithSpecificMethod.AccountTest@3c0be339]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="c4f3a0">  <td>19/12/24 12:03:52</td>   <td>19225</td> <td>&nbsp;</td><td title="&gt;&gt;ChatterTest.setupTest()[pri:0, instance:testng.SFWithSpecificMethod.ChatterTest@1ebd319f]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/24 12:04:08</td>   <td>35726</td> <td>&nbsp;</td><td title="&gt;&gt;OpportunityTest.setupTest()[pri:0, instance:testng.SFWithSpecificMethod.OpportunityTest@7b02881e]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/24 12:04:23</td>   <td>50769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.Opportunity()[pri:1, instance:testng.SFWithSpecificMethod.OpportunityTest@7b02881e]">Opportunity</td> 
-  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/24 12:04:41</td>   <td>68226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.addActivity()[pri:2, instance:testng.SFWithSpecificMethod.OpportunityTest@7b02881e]">addActivity</td> 
-  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/24 12:05:03</td>   <td>90611</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.addChatter()[pri:3, instance:testng.SFWithSpecificMethod.OpportunityTest@7b02881e]">addChatter</td> 
-  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="c4f3a0">  <td>19/12/24 12:05:18</td>   <td>105082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChatterTest.Chatter()[pri:0, instance:testng.SFWithSpecificMethod.ChatterTest@1ebd319f]">Chatter</td> 
-  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="9191a6">  <td>19/12/24 12:05:31</td>   <td>117805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.createAccount()[pri:1, instance:testng.SFWithSpecificMethod.AccountTest@3c0be339]">createAccount</td> 
-  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="9191a6">  <td>19/12/24 12:05:55</td>   <td>142642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addActivity()[pri:2, instance:testng.SFWithSpecificMethod.AccountTest@3c0be339]">addActivity</td> 
-  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="9191a6">  <td>19/12/24 12:06:13</td>   <td>160364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addChatter()[pri:3, instance:testng.SFWithSpecificMethod.AccountTest@3c0be339]">addChatter</td> 
-  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="9191a6">  <td>19/12/24 12:06:29</td>   <td>176295</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.teardown()[pri:0, instance:testng.SFWithSpecificMethod.AccountTest@3c0be339]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="c4f3a0">  <td>19/12/24 12:06:31</td>   <td>178513</td> <td>&nbsp;</td><td title="&lt;&lt;ChatterTest.teardown()[pri:0, instance:testng.SFWithSpecificMethod.ChatterTest@1ebd319f]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/24 12:06:34</td>   <td>181150</td> <td>&nbsp;</td><td title="&lt;&lt;OpportunityTest.teardown()[pri:0, instance:testng.SFWithSpecificMethod.OpportunityTest@7b02881e]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
+<tr bgcolor="efa5e3">  <td>20/01/13 01:04:03</td>   <td>0</td> <td title="&gt;&gt;SFGlobalSearch.setupClass()[pri:0, instance:testng.Demo1_GlobalSearch.SFGlobalSearch@396f6598]">&gt;&gt;setupClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="efa5e3">  <td>20/01/13 01:04:06</td>   <td>3041</td> <td>&nbsp;</td><td title="&gt;&gt;SFGlobalSearch.setupTest()[pri:0, instance:testng.Demo1_GlobalSearch.SFGlobalSearch@396f6598]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="efa5e3">  <td>20/01/13 01:04:45</td>   <td>42290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SFGlobalSearch.globalSearch()[pri:0, instance:testng.Demo1_GlobalSearch.SFGlobalSearch@396f6598]">globalSearch</td> 
+  <td>main@1032986144</td>   <td></td> </tr>
+<tr bgcolor="efa5e3">  <td>20/01/13 01:05:35</td>   <td>92277</td> <td>&nbsp;</td><td title="&lt;&lt;SFGlobalSearch.teardown()[pri:0, instance:testng.Demo1_GlobalSearch.SFGlobalSearch@396f6598]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1032986144</td>   <td></td> </tr>
 </table>
