--- a/test-output/old/SolveurITSDemo/methods.html
+++ b/test-output/old/SolveurITSDemo/methods.html
@@ -1,36 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SolveurITSDemo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="adbc9d">  <td>19/12/22 23:25:22</td>   <td>0</td> <td title="&gt;&gt;AccountTest.setupClass()[pri:0, instance:testng.GlobalMethods.AccountTest@895e367]">&gt;&gt;setupClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1550228904</td>   <td></td> </tr>
-<tr bgcolor="67b9bf">  <td>19/12/22 23:25:22</td>   <td>210</td> <td title="&gt;&gt;OpportunityTest.setupClass()[pri:0, instance:testng.GlobalMethods.OpportunityTest@53b7f657]">&gt;&gt;setupClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1550228904</td>   <td></td> </tr>
-<tr bgcolor="e7a6b2">  <td>19/12/22 23:25:22</td>   <td>227</td> <td title="&gt;&gt;ChatterTest.setupClass()[pri:0, instance:testng.GlobalMethods.ChatterTest@1e81f160]">&gt;&gt;setupClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1550228904</td>   <td></td> </tr>
-<tr bgcolor="e7a6b2">  <td>19/12/22 23:25:22</td>   <td>244</td> <td>&nbsp;</td><td title="&gt;&gt;ChatterTest.setupTest()[pri:0, instance:testng.GlobalMethods.ChatterTest@1e81f160]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1234348719</td>   <td></td> </tr>
-<tr bgcolor="67b9bf">  <td>19/12/22 23:25:22</td>   <td>249</td> <td>&nbsp;</td><td title="&gt;&gt;OpportunityTest.setupTest()[pri:0, instance:testng.GlobalMethods.OpportunityTest@53b7f657]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@434311702</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/22 23:25:22</td>   <td>250</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTest.setupTest()[pri:0, instance:testng.GlobalMethods.AccountTest@895e367]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@857779761</td>   <td></td> </tr>
-<tr bgcolor="e7a6b2">  <td>19/12/22 23:26:30</td>   <td>67734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChatterTest.Chatter()[pri:0, instance:testng.GlobalMethods.ChatterTest@1e81f160]">Chatter</td> 
-  <td>TestNG-tests-3@1234348719</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/22 23:26:34</td>   <td>72052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.createAccount()[pri:1, instance:testng.GlobalMethods.AccountTest@895e367]">createAccount</td> 
-  <td>TestNG-tests-1@857779761</td>   <td></td> </tr>
-<tr bgcolor="67b9bf">  <td>19/12/22 23:26:39</td>   <td>76783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.Opportunity()[pri:1, instance:testng.GlobalMethods.OpportunityTest@53b7f657]">Opportunity</td> 
-  <td>TestNG-tests-2@434311702</td>   <td></td> </tr>
-<tr bgcolor="67b9bf">  <td>19/12/22 23:27:14</td>   <td>111959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.addActivity()[pri:2, instance:testng.GlobalMethods.OpportunityTest@53b7f657]">addActivity</td> 
-  <td>TestNG-tests-2@434311702</td>   <td></td> </tr>
-<tr bgcolor="e7a6b2">  <td>19/12/22 23:27:27</td>   <td>125182</td> <td>&nbsp;</td><td title="&lt;&lt;ChatterTest.teardown()[pri:0, instance:testng.GlobalMethods.ChatterTest@1e81f160]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1234348719</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/22 23:27:30</td>   <td>128013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addActivity()[pri:2, instance:testng.GlobalMethods.AccountTest@895e367]">addActivity</td> 
-  <td>TestNG-tests-1@857779761</td>   <td></td> </tr>
-<tr bgcolor="67b9bf">  <td>19/12/22 23:27:44</td>   <td>141943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.addChatter()[pri:3, instance:testng.GlobalMethods.OpportunityTest@53b7f657]">addChatter</td> 
-  <td>TestNG-tests-2@434311702</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/22 23:27:58</td>   <td>155891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addChatter()[pri:3, instance:testng.GlobalMethods.AccountTest@895e367]">addChatter</td> 
-  <td>TestNG-tests-1@857779761</td>   <td></td> </tr>
-<tr bgcolor="67b9bf">  <td>19/12/22 23:28:11</td>   <td>169223</td> <td>&nbsp;</td><td title="&lt;&lt;OpportunityTest.teardown()[pri:0, instance:testng.GlobalMethods.OpportunityTest@53b7f657]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@434311702</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>19/12/22 23:28:22</td>   <td>180163</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.teardown()[pri:0, instance:testng.GlobalMethods.AccountTest@895e367]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@857779761</td>   <td></td> </tr>
+<tr bgcolor="c4717c">  <td>20/01/13 00:25:36</td>   <td>0</td> <td title="&gt;&gt;AccountTest.setupSuite()[pri:0, instance:testng.Demo2_SFGlobalMethods.AccountTest@60611244]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@665726928</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>20/01/13 00:25:39</td>   <td>2939</td> <td title="&gt;&gt;OpportunityTest.setupSuite()[pri:0, instance:testng.Demo2_SFGlobalMethods.OpportunityTest@6a01e23]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@665726928</td>   <td></td> </tr>
+<tr bgcolor="9381af">  <td>20/01/13 00:25:40</td>   <td>3719</td> <td title="&gt;&gt;ChatterTest.setupSuite()[pri:0, instance:testng.Demo2_SFGlobalMethods.ChatterTest@4c15e7fd]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@665726928</td>   <td></td> </tr>
+<tr bgcolor="9381af">  <td>20/01/13 00:25:41</td>   <td>4536</td> <td>&nbsp;</td><td title="&gt;&gt;ChatterTest.setupTest()[pri:0, instance:testng.Demo2_SFGlobalMethods.ChatterTest@4c15e7fd]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1437136073</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>20/01/13 00:25:41</td>   <td>4568</td> <td>&nbsp;</td><td title="&gt;&gt;OpportunityTest.setupTest()[pri:0, instance:testng.Demo2_SFGlobalMethods.OpportunityTest@6a01e23]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@998778592</td>   <td></td> </tr>
+<tr bgcolor="c4717c">  <td>20/01/13 00:25:41</td>   <td>4568</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTest.setupTest()[pri:0, instance:testng.Demo2_SFGlobalMethods.AccountTest@60611244]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@430227769</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>20/01/13 00:26:29</td>   <td>52882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.Opportunity()[pri:1, instance:testng.Demo2_SFGlobalMethods.OpportunityTest@6a01e23]">Opportunity</td> 
+  <td>TestNG-tests-2@998778592</td>   <td></td> </tr>
+<tr bgcolor="c4717c">  <td>20/01/13 00:26:29</td>   <td>53210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.createAccount()[pri:1, instance:testng.Demo2_SFGlobalMethods.AccountTest@60611244]">createAccount</td> 
+  <td>TestNG-tests-1@430227769</td>   <td></td> </tr>
+<tr bgcolor="9381af">  <td>20/01/13 00:26:31</td>   <td>55046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChatterTest.Chatter()[pri:0, instance:testng.Demo2_SFGlobalMethods.ChatterTest@4c15e7fd]">Chatter</td> 
+  <td>TestNG-tests-3@1437136073</td>   <td></td> </tr>
+<tr bgcolor="9381af">  <td>20/01/13 00:27:33</td>   <td>116952</td> <td>&nbsp;</td><td title="&lt;&lt;ChatterTest.teardown()[pri:0, instance:testng.Demo2_SFGlobalMethods.ChatterTest@4c15e7fd]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@1437136073</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>20/01/13 00:27:36</td>   <td>119923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.addActivity()[pri:2, instance:testng.Demo2_SFGlobalMethods.OpportunityTest@6a01e23]">addActivity</td> 
+  <td>TestNG-tests-2@998778592</td>   <td></td> </tr>
+<tr bgcolor="c4717c">  <td>20/01/13 00:28:26</td>   <td>169970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addActivity()[pri:2, instance:testng.Demo2_SFGlobalMethods.AccountTest@60611244]">addActivity</td> 
+  <td>TestNG-tests-1@430227769</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>20/01/13 00:28:58</td>   <td>202079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.addChatter()[pri:3, instance:testng.Demo2_SFGlobalMethods.OpportunityTest@6a01e23]">addChatter</td> 
+  <td>TestNG-tests-2@998778592</td>   <td></td> </tr>
+<tr bgcolor="c4717c">  <td>20/01/13 00:29:42</td>   <td>245601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addChatter()[pri:3, instance:testng.Demo2_SFGlobalMethods.AccountTest@60611244]">addChatter</td> 
+  <td>TestNG-tests-1@430227769</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>20/01/13 00:29:58</td>   <td>262233</td> <td>&nbsp;</td><td title="&lt;&lt;OpportunityTest.teardown()[pri:0, instance:testng.Demo2_SFGlobalMethods.OpportunityTest@6a01e23]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@998778592</td>   <td></td> </tr>
+<tr bgcolor="c4717c">  <td>20/01/13 00:30:49</td>   <td>312507</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.teardown()[pri:0, instance:testng.Demo2_SFGlobalMethods.AccountTest@60611244]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@430227769</td>   <td></td> </tr>
 </table>
