--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="77be74">  <td>20/05/12 19:41:56</td>   <td>0</td> <td title="&gt;&gt;AccountTest.setupSuite()[pri:0, instance:testcase.Demo3_SFWithElementMethod.AccountTest@4313f5bc]">&gt;&gt;setupSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 19:41:59</td>   <td>2068</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTest.setupTest()[pri:0, instance:testcase.Demo3_SFWithElementMethod.AccountTest@4313f5bc]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 19:42:59</td>   <td>62153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.createAccount()[pri:1, instance:testcase.Demo3_SFWithElementMethod.AccountTest@4313f5bc]">createAccount</td> 
-  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 19:45:30</td>   <td>213553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addActivity()[pri:2, instance:testcase.Demo3_SFWithElementMethod.AccountTest@4313f5bc]">addActivity</td> 
-  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 19:46:29</td>   <td>272255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addChatter()[pri:3, instance:testcase.Demo3_SFWithElementMethod.AccountTest@4313f5bc]">addChatter</td> 
-  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 19:47:10</td>   <td>313092</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.teardown()[pri:0, instance:testcase.Demo3_SFWithElementMethod.AccountTest@4313f5bc]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@893192050</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/13 23:46:38</td>   <td>0</td> <td title="&gt;&gt;AccountTest.setupSuite()[pri:0, instance:testcase.Demo2_SFGlobalMethods.AccountTest@5dd6264]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/13 23:46:39</td>   <td>797</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTest.setupTest()[pri:0, instance:testcase.Demo2_SFGlobalMethods.AccountTest@5dd6264]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/13 23:47:13</td>   <td>35176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.createAccount()[pri:1, instance:testcase.Demo2_SFGlobalMethods.AccountTest@5dd6264]">createAccount</td> 
+  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/13 23:48:41</td>   <td>122262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addActivity()[pri:2, instance:testcase.Demo2_SFGlobalMethods.AccountTest@5dd6264]">addActivity</td> 
+  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/13 23:49:35</td>   <td>176737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.addChatter()[pri:3, instance:testcase.Demo2_SFGlobalMethods.AccountTest@5dd6264]">addChatter</td> 
+  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/13 23:50:18</td>   <td>219852</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.teardown()[pri:0, instance:testcase.Demo2_SFGlobalMethods.AccountTest@5dd6264]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
 </table>
