--- a/test-output/old/SolveurITSDemo/classes.html
+++ b/test-output/old/SolveurITSDemo/classes.html
@@ -4,22 +4,36 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testcase.Demo4_SFWithSpecificMethod.OpportunityTest</td>
+<td>testcase.Demo4_SFWithSpecificMethod.ChatterTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addChatter</td>
+<td>Chatter</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>testcase.Demo3_SFWithElementMethod.OpportunityTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>Opportunity</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>addActivity</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
