--- a/test-output/old/SolveurITSDemo/methods.html
+++ b/test-output/old/SolveurITSDemo/methods.html
@@ -1,16 +1,84 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SolveurITSDemo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="77be74">  <td>20/05/12 21:43:11</td>   <td>0</td> <td title="&gt;&gt;OpportunityTest.setupSuite()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@4313f5bc]">&gt;&gt;setupSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 21:43:13</td>   <td>1230</td> <td>&nbsp;</td><td title="&gt;&gt;OpportunityTest.setupTest()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@4313f5bc]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 21:43:45</td>   <td>33806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.Opportunity()[pri:1, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@4313f5bc]">Opportunity</td> 
-  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 21:44:21</td>   <td>69481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.addActivity()[pri:2, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@4313f5bc]">addActivity</td> 
-  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 21:45:05</td>   <td>113246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.addChatter()[pri:3, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@4313f5bc]">addChatter</td> 
-  <td>main@893192050</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>20/05/12 21:45:43</td>   <td>151424</td> <td>&nbsp;</td><td title="&lt;&lt;OpportunityTest.teardown()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@4313f5bc]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@893192050</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/14 08:52:11</td>   <td>0</td> <td title="&gt;&gt;SFGlobalSearch.setupClass()[pri:0, instance:testcase.Demo1_GlobalSearch.SFGlobalSearch@647fd8ce]">&gt;&gt;setupClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="9ee3a2">  <td>20/05/14 08:52:12</td>   <td>1148</td> <td title="&gt;&gt;AccountTest.setupSuite()[pri:0, instance:testcase.Demo2_SFGlobalMethods.AccountTest@ef9296d]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>20/05/14 08:52:12</td>   <td>1244</td> <td title="&gt;&gt;OpportunityTest.setupSuite()[pri:0, instance:testcase.Demo2_SFGlobalMethods.OpportunityTest@bef2d72]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="73d990">  <td>20/05/14 08:52:13</td>   <td>1350</td> <td title="&gt;&gt;ChatterTest.setupSuite()[pri:0, instance:testcase.Demo2_SFGlobalMethods.ChatterTest@49b0b76]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="d964ec">  <td>20/05/14 08:52:13</td>   <td>1433</td> <td title="&gt;&gt;AccountTest.setupSuite()[pri:0, instance:testcase.Demo3_SFWithElementMethod.AccountTest@48e4374]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="7367a5">  <td>20/05/14 08:52:13</td>   <td>1498</td> <td title="&gt;&gt;OpportunityTest.setupSuite()[pri:0, instance:testcase.Demo3_SFWithElementMethod.OpportunityTest@cd3fee8]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>20/05/14 08:52:13</td>   <td>1592</td> <td title="&gt;&gt;ChatterTest.setupSuite()[pri:0, instance:testcase.Demo3_SFWithElementMethod.ChatterTest@2e4b8173]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="b7ac8f">  <td>20/05/14 08:52:13</td>   <td>1663</td> <td title="&gt;&gt;AccountTest.setupSuite()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.AccountTest@64cd705f]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="959778">  <td>20/05/14 08:52:13</td>   <td>1742</td> <td title="&gt;&gt;OpportunityTest.setupSuite()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@6a28ffa4]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="beaaf1">  <td>20/05/14 08:52:13</td>   <td>1790</td> <td title="&gt;&gt;ChatterTest.setupSuite()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.ChatterTest@5c30a9b0]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997859171</td>   <td></td> </tr>
+<tr bgcolor="9ee3a2">  <td>20/05/14 08:52:13</td>   <td>2016</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTest.setupTest()[pri:0, instance:testcase.Demo2_SFGlobalMethods.AccountTest@ef9296d]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/14 08:52:13</td>   <td>2042</td> <td>&nbsp;</td><td title="&gt;&gt;SFGlobalSearch.setupTest()[pri:0, instance:testcase.Demo1_GlobalSearch.SFGlobalSearch@647fd8ce]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="9ee3a2">  <td>20/05/14 08:52:52</td>   <td>40636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.account()[pri:0, instance:testcase.Demo2_SFGlobalMethods.AccountTest@ef9296d]">account</td> 
+  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/14 08:53:04</td>   <td>53292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SFGlobalSearch.globalSearch()[pri:0, instance:testcase.Demo1_GlobalSearch.SFGlobalSearch@647fd8ce]">globalSearch</td> 
+  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/05/14 08:54:04</td>   <td>112491</td> <td>&nbsp;</td><td title="&lt;&lt;SFGlobalSearch.teardown()[pri:0, instance:testcase.Demo1_GlobalSearch.SFGlobalSearch@647fd8ce]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>20/05/14 08:54:07</td>   <td>115941</td> <td>&nbsp;</td><td title="&gt;&gt;OpportunityTest.setupTest()[pri:0, instance:testcase.Demo2_SFGlobalMethods.OpportunityTest@bef2d72]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>20/05/14 08:54:41</td>   <td>149393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.Opportunity()[pri:0, instance:testcase.Demo2_SFGlobalMethods.OpportunityTest@bef2d72]">Opportunity</td> 
+  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="9ee3a2">  <td>20/05/14 08:57:22</td>   <td>310647</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.teardown()[pri:0, instance:testcase.Demo2_SFGlobalMethods.AccountTest@ef9296d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="73d990">  <td>20/05/14 08:57:25</td>   <td>313526</td> <td>&nbsp;</td><td title="&gt;&gt;ChatterTest.setupTest()[pri:0, instance:testcase.Demo2_SFGlobalMethods.ChatterTest@49b0b76]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>20/05/14 08:57:29</td>   <td>318102</td> <td>&nbsp;</td><td title="&lt;&lt;OpportunityTest.teardown()[pri:0, instance:testcase.Demo2_SFGlobalMethods.OpportunityTest@bef2d72]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="d964ec">  <td>20/05/14 08:57:33</td>   <td>322205</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTest.setupTest()[pri:0, instance:testcase.Demo3_SFWithElementMethod.AccountTest@48e4374]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="73d990">  <td>20/05/14 08:57:52</td>   <td>340389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChatterTest.Chatter()[pri:0, instance:testcase.Demo2_SFGlobalMethods.ChatterTest@49b0b76]">Chatter</td> 
+  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="d964ec">  <td>20/05/14 08:58:12</td>   <td>361202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.account()[pri:0, instance:testcase.Demo3_SFWithElementMethod.AccountTest@48e4374]">account</td> 
+  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="73d990">  <td>20/05/14 08:58:38</td>   <td>387201</td> <td>&nbsp;</td><td title="&lt;&lt;ChatterTest.teardown()[pri:0, instance:testcase.Demo2_SFGlobalMethods.ChatterTest@49b0b76]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="7367a5">  <td>20/05/14 08:58:42</td>   <td>390902</td> <td>&nbsp;</td><td title="&gt;&gt;OpportunityTest.setupTest()[pri:0, instance:testcase.Demo3_SFWithElementMethod.OpportunityTest@cd3fee8]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="7367a5">  <td>20/05/14 08:59:06</td>   <td>414371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.Opportunity()[pri:0, instance:testcase.Demo3_SFWithElementMethod.OpportunityTest@cd3fee8]">Opportunity</td> 
+  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="7367a5">  <td>20/05/14 09:02:03</td>   <td>591542</td> <td>&nbsp;</td><td title="&lt;&lt;OpportunityTest.teardown()[pri:0, instance:testcase.Demo3_SFWithElementMethod.OpportunityTest@cd3fee8]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>20/05/14 09:02:08</td>   <td>597015</td> <td>&nbsp;</td><td title="&gt;&gt;ChatterTest.setupTest()[pri:0, instance:testcase.Demo3_SFWithElementMethod.ChatterTest@2e4b8173]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="d964ec">  <td>20/05/14 09:02:26</td>   <td>614833</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.teardown()[pri:0, instance:testcase.Demo3_SFWithElementMethod.AccountTest@48e4374]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="b7ac8f">  <td>20/05/14 09:02:32</td>   <td>620713</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTest.setupTest()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.AccountTest@64cd705f]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>20/05/14 09:02:52</td>   <td>641104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChatterTest.Chatter()[pri:0, instance:testcase.Demo3_SFWithElementMethod.ChatterTest@2e4b8173]">Chatter</td> 
+  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="b7ac8f">  <td>20/05/14 09:03:12</td>   <td>660440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.account()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.AccountTest@64cd705f]">account</td> 
+  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>20/05/14 09:03:58</td>   <td>706713</td> <td>&nbsp;</td><td title="&lt;&lt;ChatterTest.teardown()[pri:0, instance:testcase.Demo3_SFWithElementMethod.ChatterTest@2e4b8173]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="959778">  <td>20/05/14 09:04:02</td>   <td>710776</td> <td>&nbsp;</td><td title="&gt;&gt;OpportunityTest.setupTest()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@6a28ffa4]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="959778">  <td>20/05/14 09:04:26</td>   <td>734614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityTest.Opportunity()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@6a28ffa4]">Opportunity</td> 
+  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="b7ac8f">  <td>20/05/14 09:07:18</td>   <td>906829</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.teardown()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.AccountTest@64cd705f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="beaaf1">  <td>20/05/14 09:07:21</td>   <td>910036</td> <td>&nbsp;</td><td title="&gt;&gt;ChatterTest.setupTest()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.ChatterTest@5c30a9b0]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="959778">  <td>20/05/14 09:07:27</td>   <td>916004</td> <td>&nbsp;</td><td title="&lt;&lt;OpportunityTest.teardown()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.OpportunityTest@6a28ffa4]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@369388323</td>   <td></td> </tr>
+<tr bgcolor="beaaf1">  <td>20/05/14 09:07:56</td>   <td>944565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChatterTest.Chatter()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.ChatterTest@5c30a9b0]">Chatter</td> 
+  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
+<tr bgcolor="beaaf1">  <td>20/05/14 09:08:27</td>   <td>976182</td> <td>&nbsp;</td><td title="&lt;&lt;ChatterTest.teardown()[pri:0, instance:testcase.Demo4_SFWithSpecificMethod.ChatterTest@5c30a9b0]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1672550915</td>   <td></td> </tr>
 </table>
